add-item-and-gateway